:whale: [#131] 支持获取游戏对外服的数据
增加 Broker（游戏网关）转发消息容错配置：IoGameGlobalConfig.brokerSniperToggleAK47